# moby-remote

./: .dockerignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  Dockerfile.windows  README.md  build_linux.sh  vendor_gtest.sh
include/: client.h  common.h  protocol.h  server.h
src/Tests/: EndToEnd.cpp  TransportTests.cpp
src/client-lib/: Forwarders.h  TcpForwarder.cpp  UdpForwarder.cpp  client.cpp
src/common-lib/: Codec.cpp  ReplaceFile.cpp  Transport-Linux.cpp  Transport-Windows.cpp  Transport.cpp  compat.h  threading.cpp
src/randomrecv/: main.cpp
src/randomsend/: main.cpp
src/server/: main.cpp
src/server-lib/: Server.cpp  Server_Linux.cpp
